--- a/src/Signup/Signup.css
+++ b/src/Signup/Signup.css
@@ -1,287 +1,122 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
-body {
-  	margin: 0; line-height: normal;
-}
-*{
-    color: black;
-    font-family: "Poppins";
-}
-.main-container{
+.signup-container {
+    display: flex;
+    flex-direction: row-reverse; /* Reverse the panel order */
     width: 100vw;
     height: 100vh;
-    background: #F2F3F7;
-    display: flex;
-    flex-direction: row;
-    overflow-y: hidden;
-}
-.sidebar{
-    width: 254px;
-    height: 100%;
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    padding: 10px 20px;
-    justify-content: space-between;
-    box-shadow: 0px 0px 14.6px 94px rgba(244, 239, 239, 0.24);
-
-}
-
-.sidebar-top{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-}
-.logo-label{
-    font-size: 36px;
-    font-weight: 600;
-    color: #383644;
-}
-.nav-links{
-    margin-top: 20px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-.nav-link{
-    cursor: pointer;
-    font-size: 16px;
-    font-weight: 600;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 10px;
-}
-.nav-selected{
-    background: #46455A;
+    background: #f2f3f7;
+    border-radius: 21px;
+    overflow: hidden;
+  }
+  
+  .left-panel {
+    flex: 1;
+    background: #141010;
     color: white;
-    height: 58px;
-    padding: 10px 20px;
-    border-radius: 10px;
-}
-.other-link{
-    color: #acacac;
-    padding: 10px 20px;
-}
-.nav-selected *{
-    color: #fff;
-}
-.other-icon *{
-    color: #acacac;
-}
-.icon{
-    width: 20px;
-}
-.sidebar-bottom{
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    padding-bottom: 10px;
-}
-.logout-btn{
-    width: 100%;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
     align-items: center;
-    font-size: 16px;
+    justify-content: center;
+    padding: 20px;
+  }
+  
+  .welcome-title {
+    font-family: 'Poppins', sans-serif;
+    font-size: 32px;
     font-weight: 600;
-    gap: 10px;
-    font-style: normal;
-    color: #f2bfbd;
-}
-.logout-icon{
-    transform: scaleX(-1);
-    color: #f2bfbd;
-}
-.logout-icon *{
-    color: #f2bfbd;
-}
-
-.logout-line {
-    width: 100%;
-    position: relative;
-    border-top: 1px solid #ababab;
-    box-sizing: border-box;
-    height: 1px;
-}
-.right-container{
-    width: 100%;
-    height: 100%;
-    padding: 16px 28px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    overflow-y: scroll;
-}
-.header-title{
-    font-size: 26px;
-    font-weight: 600;
-    font-family: Poppins;
-    color: #000;
-    text-align: left;
-}
-
-.header{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.notif-container, .user-eclipse{
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: #d9d9d9;
-    padding: 20px;
-    display: flex;align-items: center;
-    justify-content: center;
-}
-.right-header{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 22px;
-}
-.user-name{
-    font-size: 16px;
-    font-weight: 400;
-    font-family: Inter;
-    color: #000;
-    text-align: left;
-}
-
-.home-body{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-}
-.left-body{
-    width: 754px;
-    border-radius: 15px;
-    background-color: #fff;
-    height: 320px;
-    gap: 26px;
-}
-.my-cards-container{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    gap: 20px;
-    margin-bottom: 15px;
-}
-.my-cards-header{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.my-cards-header .my-cards-title{
-    font-size: 24px;
-}
-.my-cards-header .add-card-btn{
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #ebeaee;
-    height: 44px;
-    text-align: center;
-    width: fit-content;
-}
-.my-cards-info-container{
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.my-card-background{
-    width: 400px;
-    position: relative;
-    border-radius: 20px;
-    background-color: #46445a;
-    height: 225px;
-}
-.my-cards-info{
-    width: 100%;
-    height: 225px;
-}
-.my-card-back-header{
-    width: 100%;
-    height: 45%;
-    background: #46445a;
-    border-radius: 20px 20px 0px 0px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 20px;
-}
-.my-card-back-bottom{
-    width: 100%;
-    height: 55%;
-    background: #535169;
-    border-radius: 0px 0px 20px 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-    padding: 30px;
-    padding-top: 10px;
-}
-.eclipse{
-    width: 34px;
-    position: relative;
-    border-radius: 50%;
-    background-color: rgba(122, 121, 135, 0.66);
-    height: 34px;
-}
-.eclipse2{
-    margin-left: -15px;
-}
-.card-number{
+    margin-bottom: 10px;
+    color: #FFF;
+  }
+  
+  .welcome-subtitle {
+    font-family: 'Poppins', sans-serif;
     font-size: 22px;
-    display: inline-block;
-    font-family: Poppins;
-    color: #fff;
-    text-align: left;
-    text-transform: uppercase;
-    font-weight: 900;
-}
-.card-holder-date{
-    width: 100%;
+    font-weight: 500;
+    margin-bottom: 20px;
+    color: #FFF;
+  }
+  
+  .welcome-image {
+    width: 394px;
+    height: 394px;
+  }
+  
+  .right-panel {
+    flex: 1;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-}
-.card-holder-date *{
-    font-size: 16px;
-    display: inline-block;
-    font-family: Poppins;
-    color: #fff;
-    text-align: left;
-    font-weight: 900;
-}
-.stats-container{
-    width: 100%;
-    border-radius: 15px;
-    background-color: #fff;
-    height: fit-content;
+    justify-content: center;
+    background: #F2F3F7;
     padding: 20px;
-    gap: 20px;
-}
-.option-btn{
+  }
+  
+  .form-title {
+    font-family: 'Poppins', sans-serif;
+    font-size: 32px;
+    font-weight: 700;
+    margin-bottom: 10px;
+  }
+  
+  .form-subtitle {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    color: #d9d9d9;
+    margin-bottom: 30px;
+  }
+  
+  .link {
+    color: black;
+    cursor: pointer;
+  }
+  
+  .signup-form {
     width: 100%;
-position: relative;
-border-radius: 5px;
-background-color: #f6f6f6;
-height: 37px;
-}
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px; /* Adds spacing between form groups */
+  }
+  
+  .form-row {
+    display: flex;
+    gap: 10px; /* Spacing between fields in a row */
+  }
+  
+  .form-group {
+    flex: 1; /* Ensures the inputs in a row take equal space */
+  }
+  
+  label {
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    color: black;
+    margin-bottom: 5px;
+    display: block;
+  }
+  
+  .form-input {
+    width: 100%;
+    height: 46px;
+    padding: 10px;
+    border: 1px solid #acacac;
+    border-radius: 10px;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    background-color: #fff;
+  }
+  
+  .signup-button {
+    width: 100%;
+    height: 50px;
+    background: black;
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: 600;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+  }
+  
