--- a/src/Guide/Guide.css
+++ b/src/Guide/Guide.css
@@ -1,13 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@800&display=swap');
+
 body {
-  	margin: 0; line-height: normal;
+    margin: 0;
+    line-height: normal;
 }
-*{
+* {
     color: black;
     font-family: "Poppins";
 }
-.main-container{
+.main-container {
     width: 100vw;
     height: 100vh;
     background: #F2F3F7;
@@ -15,7 +17,14 @@ body {
     flex-direction: row;
     overflow-y: hidden;
 }
-.sidebar{
+.container{
+    display: flex;
+    flex-direction: row;
+    background: #fff;
+    width: 100%;
+    height: 110%;
+}
+.sidebar {
     width: 254px;
     height: 100%;
     background: #fff;
@@ -24,27 +33,25 @@ body {
     padding: 10px 20px;
     justify-content: space-between;
     box-shadow: 0px 0px 14.6px 94px rgba(244, 239, 239, 0.24);
-
 }
-
-.sidebar-top{
+.sidebar-top {
     width: 100%;
     display: flex;
     flex-direction: row;
 }
-.logo-label{
+.logo-label {
     font-size: 36px;
     font-weight: 600;
     color: #383644;
 }
-.nav-links{
+.nav-links {
     margin-top: 20px;
     width: 100%;
     display: flex;
     flex-direction: column;
     gap: 20px;
 }
-.nav-link{
+.nav-link {
     cursor: pointer;
     font-size: 16px;
     font-weight: 600;
@@ -55,33 +62,33 @@ body {
     justify-content: flex-start;
     gap: 10px;
 }
-.nav-selected{
+.nav-selected {
     background: #46455A;
     color: white;
     height: 58px;
     padding: 10px 20px;
     border-radius: 10px;
 }
-.other-link{
+.other-link {
     color: #acacac;
     padding: 10px 20px;
 }
-.nav-selected *{
+.nav-selected * {
     color: #fff;
 }
-.other-icon *{
+.other-icon * {
     color: #acacac;
 }
-.icon{
+.icon {
     width: 20px;
 }
-.sidebar-bottom{
+.sidebar-bottom {
     display: flex;
     flex-direction: column;
     gap: 20px;
     padding-bottom: 10px;
 }
-.logout-btn{
+.logout-btn {
     width: 100%;
     text-align: center;
     display: flex;
@@ -93,14 +100,13 @@ body {
     font-style: normal;
     color: #f2bfbd;
 }
-.logout-icon{
+.logout-icon {
     transform: scaleX(-1);
     color: #f2bfbd;
 }
-.logout-icon *{
+.logout-icon * {
     color: #f2bfbd;
 }
-
 .logout-line {
     width: 100%;
     position: relative;
@@ -108,47 +114,32 @@ body {
     box-sizing: border-box;
     height: 1px;
 }
-.right-container{
-    width: 100%;
-    height: 100%;
-    padding: 16px 28px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    overflow-y: scroll;
-}
-.header-title{
+
+.header-title {
     font-size: 26px;
     font-weight: 600;
     font-family: Poppins;
     color: #000;
     text-align: left;
 }
-
-.header{
+.header {
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
-.notif-container, .user-eclipse{
+.notif-container, .user-eclipse {
     width: 44px;
     height: 44px;
     border-radius: 50%;
     background-color: #d9d9d9;
     padding: 20px;
-    display: flex;align-items: center;
-    justify-content: center;
-}
-.right-header{
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 22px;
 }
-.user-name{
+.user-name {
     font-size: 16px;
     font-weight: 400;
     font-family: Inter;
@@ -156,132 +147,409 @@ body {
     text-align: left;
 }
 
-.home-body{
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-}
-.left-body{
-    width: 754px;
-    border-radius: 15px;
-    background-color: #fff;
-    height: 320px;
-    gap: 26px;
-}
-.my-cards-container{
-    width: 100%;
+/* Partie gauche */
+.left-container {
+    width: 38%;
+    padding: 14px;
     display: flex;
     flex-direction: column;
-    padding: 20px;
-    gap: 20px;
-    margin-bottom: 15px;
+    height: auto;
+    flex-shrink: 0;
+    border-radius: 15px;
+    background: #FFF;
 }
-.my-cards-header{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.text-research-name {
+    color: #000;
+    font-family: Arial;
+    font-size: 31px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 7px;
 }
-.my-cards-header .my-cards-title{
-    font-size: 24px;
-}
-.my-cards-header .add-card-btn{
-    padding: 10px;
-    border-radius: 5px;
-    background-color: #ebeaee;
-    height: 44px;
-    text-align: center;
-    width: fit-content;
-}
-.my-cards-info-container{
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+.text-question-to-tap {
+    color: #AAA;
+    font-family: Arial;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 20px;
 }
 
-.my-card-background{
+.input-div{
+    border-radius: 5px;
+    border: 1px solid #000;
     width: 400px;
+    height: 43px;
+    margin-bottom: 120px;
+}
+
+.input-question {
+    background: none;
+    width: 370px;
+    height: 43px;
+    padding: 10px;
+    font-size: 14px;
+    color: #383644;
+    
+    margin-bottom: 115px;
     position: relative;
-    border-radius: 20px;
-    background-color: #46445a;
-    height: 225px;
 }
-.my-cards-info{
-    width: 100%;
-    height: 225px;
+.input-question::placeholder {
+    color: #a1a1a1;
 }
-.my-card-back-header{
-    width: 100%;
-    height: 45%;
-    background: #46445a;
-    border-radius: 20px 20px 0px 0px;
+.text-start-writing {
+    color: #AAA;
+    font-family: Arial;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.layout-start {
+    width: 400px;
+    height: 39px;
+    flex-shrink: 0;
     display: flex;
-    flex-direction: row;
+    justify-content: center;
     align-items: center;
     padding: 20px;
+    border-radius: 5px;
+    background: #E0DEFE;
+    margin-bottom: 20px;
 }
-.my-card-back-bottom{
-    width: 100%;
-    height: 55%;
-    background: #535169;
-    border-radius: 0px 0px 20px 20px;
+.text-start {
+    color: #735BF3;
+    font-family: Arial;
+    font-size: 19px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.text-question-exemple {
+    color: #8484A7;
+    font-family: Arial;
+    font-size: 16px;
+    font-style: normal;
+    margin-left: 28px;
+    font-weight: 700;
+    line-height: normal;
+}
+.question-exemples{
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    gap: 20px;
-    padding: 30px;
-    padding-top: 10px;
+    gap: 16px;
 }
-.eclipse{
-    width: 34px;
-    position: relative;
-    border-radius: 50%;
-    background-color: rgba(122, 121, 135, 0.66);
-    height: 34px;
+.layout-support {
+    background-color: #f8f8f8;
+    width: 400px;
+    height: 120px;
+    flex-shrink: 0;
+    padding: 20px;
+    border-radius: 10px;
+    background: #735BF3;
+    margin-left: 14px;
+    margin-top: 37px;
 }
-.eclipse2{
-    margin-left: -15px;
-}
-.card-number{
-    font-size: 22px;
-    display: inline-block;
-    font-family: Poppins;
-    color: #fff;
-    text-align: left;
-    text-transform: uppercase;
-    font-weight: 900;
-}
-.card-holder-date{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-.card-holder-date *{
+.text-need-assistance {
+    color: #FBFAFE;
+    font-family: Arial;
     font-size: 16px;
-    display: inline-block;
-    font-family: Poppins;
-    color: #fff;
-    text-align: left;
-    font-weight: 900;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
 }
-.stats-container{
+.text-send-question {
+    color: #A395F3;
+    font-family: Arial;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+.bouton-contact {
+    display: flex;
+    width: 149px;
+    height: 34px;
+    flex-shrink: 0;
+    justify-content: center;
+    align-items: center;
+    padding: 12px 20px;
+    background-color: #46455A;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    background: #FFF;
+    cursor: pointer;
+}
+.bouton-contact:hover {
+    background-color: #383746;
+}
+.text-bouton-contact {
+    color: #32335A;
+    font-family: Arial;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.image-support{
+    transform: translate3d(280px,-60px,0)
+}
+
+.right-container {
+    width: 50%;
+    height: 100%;
+    padding: 16px 28px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
+.bookmark-icon {
+    width: 21px;
+    height: 20px; 
+    flex-shrink: 0;
+    stroke: #735BF3
+}
+
+.suggestion-bar-container {
+    display: flex;
+    width: 100%; 
+}
+
+.text-all-suggestions {
+    color: #846FF4;
+    font-family: Arial;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 2px;
+}
+
+.text-saved {
+    color: #7B789A;
+    font-family: Arial;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 21px;
+}
+
+.text-draft {
+    color: #7B789A;
+    font-family: Arial;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 30px;
+}
+
+.rectangle-background {
+    width: 705px;
+    height: 2px;
+    background: #E8E8E8;
+    border-radius: 1px;
+    position: relative;
+    margin-top: -15px;
+  }
+  
+  .suggestion-filter-container {
+    display: flex;
+    width: 100%; 
+    align-items: center;
+}
+  .rectangle {
+    width: 178px;
+    height: 2px;
+    background: #745DF3;
+    border-radius: 1px;
+    position: absolute;
+
+  }
+
+  .rectangle-pencil {
+    width: 24.664px;
+    height: 23.891px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    position: relative;
+    background: #F1EFFE;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.text-new-suggestion {
+    color: #735BF3;
+    font-family: Arial;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 9px;
+    text-wrap: nowrap;
+}
+
+.filter-icon {
+    width: 14.094px;
+    height: 13.319px;
+    stroke-width: 1.5px;
+    stroke: #8181A5;
+    margin-left: 313px;
+}
+
+.text-filter {
+    color: #8181A5;
+    font-family: Arial;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-left: 10.57px;
+}
+
+.text-a-z {
+    color: #7B65F4;
+    font-family: Arial;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-left: 4.23px;
+    text-wrap: nowrap;
+}
+
+.arrowdown-icon {
+    width: 17.617px;
+    height: 16.649px;
+    stroke-width: 1.5px;
+    stroke: #8181A5;
+    margin-left: 0.26px;
+}
+
+.rectangle-more-menu {
+    width: 98.657px;
+    height: 34.131px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #EFECFB;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+    margin-left: 21.14px;
+}
+  
+.more-icon {
+    width: 17.617px;
+    height: 17.065px;
+    stroke-width: 1.5px;
+    stroke: #907DF4;
+    margin-left: 16.74px;
+}
+  
+.rectangle-menu {
+    width: 44.043px;
+    height: 27.305px;
+    flex-shrink: 0;
+    border-radius: 5px;
+    background: #765FF3;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 16.74px;
+  }
+  
+.menu-icon {
+    width: 17.617px;
+    height: 17.065px;
+    stroke: #FFF;
+    flex-shrink: 0;
+}
+  
+.rectangle-guide {
     width: 100%;
     border-radius: 15px;
-    background-color: #fff;
-    height: fit-content;
-    padding: 20px;
+    background: #747B8F;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    padding: 10px;
+}
+.guide-container{
+    display: flex;
+    flex-direction: column;
     gap: 20px;
 }
-.option-btn{
-    width: 100%;
-position: relative;
-border-radius: 5px;
-background-color: #f6f6f6;
-height: 37px;
+.top-guide-container {
+    display: flex;
+    width: 100%; 
+    align-items: center;
+}
+
+.text-id-suggestion {
+    width: 173px;
+    height: 11.119px;
+    flex-shrink: 0;
+    color: #FFF;
+    font-family: Arial;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+}
+
+.text-time {
+    width: 57px;
+    height: 9.883px;
+    flex-shrink: 0;
+    color: #FFF;
+    font-family: Arial;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 402.2px;
+    margin-top: auto;
+}
+
+.group-icon {
+    width: 22.022px;
+    height: 2.635px;
+    flex-shrink: 0;
+    margin-left: 5.54px;
+    margin-top: auto;
+}
+
+.text-guide-title {
+    flex-shrink: 0;
+    color: #FFF;
+    font-family: Arial;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 20px;
+}
+
+.text-guide-description {
+    color: #FFF;
+    text-align: justify;
+    font-family: Arial;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
