--- a/src/Guide/Guide.css
+++ b/src/Guide/Guide.css
@@ -22,7 +22,8 @@ body {
     flex-direction: row;
     background: #fff;
     width: 100%;
-    height: 110%;
+    height: 100%;
+    border-radius: 10px;
 }
 .sidebar {
     width: 254px;
@@ -530,7 +531,7 @@ body {
     height: 2.635px;
     flex-shrink: 0;
     margin-left: 5.54px;
-    margin-top: auto;
+    margin-top: -1px;
 }
 
 .text-guide-title {
