--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -172,7 +172,7 @@ body {
 
 .profile-section {
     background: white;
-    height: 100%;
+    height: fit-content;
     border-radius: 15px;
     padding: 80px 200px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
