maj fin de journée

--- a/src/Profile/Profile.css
+++ b/src/Profile/Profile.css
@@ -92,6 +92,7 @@ body {
     gap: 10px;
     font-style: normal;
     color: #f2bfbd;
+    cursor: pointer;
 }
 .logout-icon{
     transform: scaleX(-1);
