--- a/src/Guide/Guide.css
+++ b/src/Guide/Guide.css
@@ -89,7 +89,7 @@ body {
     gap: 20px;
     padding-bottom: 10px;
 }
-.logout-btn {
+.logout-btn-1 {
     width: 100%;
     text-align: center;
     display: flex;
@@ -100,6 +100,7 @@ body {
     gap: 10px;
     font-style: normal;
     color: #f2bfbd;
+    cursor: pointer;
 }
 .logout-icon {
     transform: scaleX(-1);
